# training_rustacean_rust

./: '  Cargo.toml  README.md  calculate_pi  program.py
.ccls-cache/@@Users@globalyoung@Documents@Project@Github@rust_project@training_rustacean_rust/: @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@__wctype.h.blob  (+343 more)
C_Lang/: .sizeofval.c.swp  a.out  address_ex01.c  hello.out  mem_leak.c  mem_leak.out  puts  puts.c  sizeofval  sizeofval.c
Cpp_Lang/: .sizeofval_cpp.cpp.swp  Calculator.cpp  Calculator.h  CalculatorTutorial.cpp  Makefile  a.out  function.cpp  function.h  function_test.cpp  function_test.h  generic.cpp  hello  main  main.cpp  mem_leak.cpp  pipi.cpp  sizeofval_cpp.cpp  stdc++.h  study.cpp  tut68.cpp  vector_ex01  vector_ex01.cpp  vector_stl_.cpp
Cpp_Lang/Calculator/: Calculator.h.gch  CalculatorTutorial.cpp  a.out
Go_Lang/: README.MD  main.go
HTML_Lang/: index.html  test.js  test.ts
Java/: HelloWorld.java  README.md
Python/: numpy111.py  numpy_test.py  numpy_test001.py  pipi.py  py_vs_rust_concurrency.py  python_calculator.py  typeinference.py
readme/: readme.md
sort/: rust_sort.txt
src/: .main.rs.rustfmt  .main.rs.swp  char.rs  darray_01.rs  front_of_house.rs  into_iter_test.rs  lib.rs  main  main.rs  main.rs.html
zig_lang/: comptime.zig
(+6 files in other folders)
